@@ -88,13 +88,21 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
   /**
    * If set to true, every request that implements {@link V2RequestSupport} will be converted to a
    * V2 API call
+   *
+   * @deprecated use v2-native {@link SolrRequest} implementations directly instead
    */
+  @Deprecated
   public SolrRequest<T> setUseV2(boolean flag) {
     this.usev2 = flag;
     return this;
   }
 
-  /** If set to true use javabin instead of json (default) */
+  /**
+   * If set to true use javabin instead of json (default)
+   *
+   * @deprecated use v2-native {@link SolrRequest} implementations directly instead
+   */
+  @Deprecated
   public SolrRequest<T> setUseBinaryV2(boolean flag) {
     this.useBinaryV2 = flag;
     return this;
